made it so that IP values are not hard coded and put into env files instead.